# gn-build-with-bazel

./: BUILD.bazel  WORKSPACE
